# StarChecker

./: README.md  pyproject.toml  requirements.txt
src/StarChecker/: ChangeCheck.py  DevFind.py  StarChecker.code-workspace
src/StarChecker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
