[project]
name = "StarChecker"
version = "0.7" 
dynamic = ["dependencies"]
description = "A project that sends you SMS notifications via ntfy.sh when someone stars one of your devlogs!"
authors = [{ name = "Shree Nag", email="shreeyuva2020@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
homepage = "https://github.com/shreeyuvan2020/devlog-star-checker"
repository = "https://github.com/shreeyuvan2020/devlog-star-checker/issues"

[project.scripts]
starchecker = "StarChecker.DevFind:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"